[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
thiserror = "1.0.69"
tracing-appender = "0.2.3"
tokio = { version = "1.42.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "fs",
] }
derive_builder = "0.20.2"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
axum = { version = "0.7.9", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
async-trait = "0.1.83"

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.133"
http = "1.2.0"
bytes = "1.9.0"
blake3 = "1.5.5"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
console-subscriber = "0.4.1"
nanoid = "0.4.0"
pingora-core = "0.4.0"
pingora-proxy = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-http = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
sysinfo = "0.33.0"
deadpool-postgres = "0.14.1"
whoami = "1.5.2"
