[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client1"
path = "./src/client1.rs"

[[bin]]
name = "client2"
path = "./src/client2.rs"

[dependencies]
anyhow = "1.0.94"
thiserror = "1.0.69"
tracing-appender = "0.2.3"
tokio = { version = "1.42.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
  "fs",
] }
derive_builder = "0.20.2"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
serde_with = "3.11.0"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
axum = { version = "0.7.9", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
] }
async-trait = "0.1.83"
validator = { version = "0.20.0", features = ["derive"] }
prost = "0.13.4"
tonic = "0.12.3"
tower = { version = "0.5.2", features = ["timeout", "util"] }
tonic-web = "0.12.3"
hyper-util = "0.1.10"
tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-gzip", "timeout"] }
etcd-client = "0.14.1"
rustis = "0.13.3"
moka = { version = "0.12.10", features = ["future"] }

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.133"
http = "1.2.0"
bytes = "1.9.0"
blake3 = "1.5.5"
dashmap = "6.1.0"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
futures = "0.3.31"
console-subscriber = "0.4.1"
nanoid = "0.4.0"
pingora-core = "0.4.0"
pingora-proxy = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-http = "0.4.0"
log = "0.4.22"
env_logger = "0.11.5"
sysinfo = "0.33.0"
deadpool-postgres = "0.14.1"
whoami = "1.5.2"

[build-dependencies]
tonic-build = "0.12.3"
